# coco_formatter

./: README.md  export_categories.py  pyproject.toml  requirements.txt  setup.py  test.py
coco_formatter/: __init__.py  coco_defaults.py  coco_formatter.py  formatting_coco.py
